# CHC_and_gene_data_analysis

./: .gitignore  README.md  pyproject.toml
aux_info/: .~lock.substance_metadata.xlsx#  asm_inf_all_01Sep2025.xlsx  chc_code_translation.tsv  code_to_spec.tsv  genome_species.tsv  substance_metadata.tsv  substance_metadata.xlsx
data/: CHC_analysis_draft_reformed.xlsx  CHC_analysis_finaldraft_reformed.xlsx  gene_counts.tsv  hedychrum.tsv  preedit_svg.sh  svg_for_google.sh
fig/edit/: png_from_svg.sh
scripts/: plot_gene_family_treatment.py  plot_gene_space.py  plot_genes_vs_chc.py  plot_nmds.py  write_CHC_metadata.py  write_gene_counts.py
scripts/one_time_use/: shotlabel_to_species.py  unify_column_labels.py
src/chcchem/: chc.py
