[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "chcchem"
version = "0.1.0"
description = "Cuticular hydrocarbon analysis utilities"
authors = [
    { name = "Paul Crenis" }
]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "pandas>=2.0",
    "numpy>=1.24",
]

[tool.setuptools.packages.find]
where = ["src"]
